--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ header {
   font-size: 30px;
   line-height: 30px;
   z-index: 0;
+  display: flex;
+  justify-content: center;
 }
 
 /* drawer menu pane - note the 0px width */
@@ -75,7 +77,7 @@ header {
   left: -300px;
   height: 100%;
   width: 300px;
-  background: #2f2f2f;
+  background: #000000;
   z-index: 1;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -90,10 +92,9 @@ header {
 
 #content {
   margin-left: 0px;
-  margin-top: 50px;
+  margin-top: 40px;
   width: 100%;
-  height: calc(100% - 50px);
-  margin-top: 50px;
+  height: calc(100% - 40px);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -180,12 +181,13 @@ progress {
   accent-color: #5acce6;
 }
 
-#study-info {
+.study-info {
   display: flex;
   flex-direction: column;
   padding: 10px;
   background-color: #000000;
   color: #5acce6;
+  font-size: 14px;
 }
 
 #main-image {
@@ -196,23 +198,40 @@ progress {
 }
 
 .tools-container {
+  padding: 10px;
   display: flex;
   height: 65px;
-  background-color: #ffffff;
+  background-color: #000000;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
+  user-select: none;
 }
 
 .tool {
+  border: none;
+  background-color: transparent;
+  outline: inherit;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 5px;
   width: 50px;
   align-items: center;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.tool-active {
+  color: #4e63af;
+  font-weight: bold;
 }
 
 .tool > img {
   height: 24px;
+}
+
+.tool > i {
+  font-size: 24px;
 }
 
 .tool > span {
@@ -227,4 +246,5 @@ progress {
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
+  user-select: none;
 }
